# didactic-waddle

./: .gitignore  README.md  main.py  pyproject.toml  revenue_chart.py
.chainlit/: config.toml
.files/984ee22e-fa11-49e4-a7cd-7798fe23f1e2/: aff2d40f-e06e-44cd-ab1d-d2f1c034960b.json
public/elements/: PrefabView.jsx  RevenueChart.jsx  StockDashboard.jsx
services/: stock_analysis.py
tests/: smoke_test_stock_analysis.py
